overflow x fixed

--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300&family=Roboto&family=Work+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+html, body {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+}
 .medium-font{
     text-align: center;
     font-family: 'Lexend', sans-serif;
